--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
   <head>
     <title>IoB</title>
+    <style>
+      html {
+        background-color: #111317;
+        height: 100%;
+        position: relative;
+        margin: 0px;
+        padding: 0px;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     Internet of Buildings
