--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         margin: 0px;
         padding: 0px;
         color: white;
+        text-align: center;
       }
     </style>
   </head>
   <body>
-    Internet of Buildings
+    <img src="logo.png" />
   </body>
 </html>
