--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
         color: white;
         text-align: center;
       }
+      #logo {
+        width: 240px;
+        position: relative;
+        top: 400px;
+      }
     </style>
   </head>
   <body>
-    <img src="logo.png" />
+    <img src="logo.png" id="logo"/>
   </body>
 </html>
