--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
       #logo {
         width: 240px;
         position: relative;
-        top: 400px;
+        top: 250px;
       }
     </style>
   </head>
   <body>
     <img src="logo.png" id="logo"/>
+    <br><br>
+    Under construction
   </body>
 </html>
