--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
       }
       #logo {
         width: 240px;
+      }
+      #logoBox {
         position: relative;
         top: 250px;
       }
     </style>
   </head>
   <body>
-    <img src="logo.png" id="logo"/>
+    <div>
+      <img src="logo.png" id="logo"/>
+      <br>
+      hello@iobsolutions.com
+    </div>
   </body>
 </html>
