--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </style>
   </head>
   <body>
-    <div>
+    <div id="logoBox">
       <img src="logo.png" id="logo"/>
-      <br>
+      <br><br>
       hello@iobsolutions.com
     </div>
   </body>
