--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
       }
       #logo {
         width: 240px;
+        left: -10px;
       }
       #logoBox {
         position: relative;
+        font-family: 'Bahnschrift', sans-serif;
         top: 250px;
       }
     </style>
@@ -24,7 +26,7 @@
   <body>
     <div id="logoBox">
       <img src="logo.png" id="logo"/>
-      <br><br>
+      <br><br><br>
       hello@iobsolutions.com
     </div>
   </body>
