--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       #logo {
         width: 240px;
         left: -10px;
+        position: relative;
       }
       #logoBox {
         position: relative;
